<resources>
    <string name="app_name">SummationLib</string>
    <string name="main_txt">this is client flavor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_play_text">play</string>
    <string name="submit_button">Submit</string>

    <string-array name="questions">
        <item>Why People dress up as demon on Halloween?</item>
        <item>What is the real meaning of the word "Witch"?</item>
        <item>Where did Tricks for treats originate?</item>
        <item>What is the most favoured treat for Halloween?</item>
        <item>People of Ireland and Scotland carve ___ during Halloween-</item>
        <item>Mexico celebrates this event instead of Halloween - </item>

    </string-array>

    <string-array name="ans_1">
        <item>To ward off the evil spirits</item>
        <item>To have fun</item>
        <item>To educate children</item>
    </string-array>

    <string-array name="ans_2">
        <item>Wise woman</item>
        <item>A lady who performs black magic</item>
        <item>A lady who lives in the forest</item>
    </string-array>

    <string-array name="ans_3">
        <item>Europe</item>
        <item>America</item>
        <item>Mexico</item>
    </string-array>

    <string-array name="ans_4">
        <item>Chocolate</item>
        <item>Gum</item>
        <item>Candy</item>
    </string-array>

    <string-array name="ans_5">
        <item>Turnip</item>
        <item>Pumpkin</item>
        <item>Watermelon</item>
    </string-array>

    <string-array name="ans_6">
        <item>Day of the dead</item>
        <item>The spirit</item>
        <item>The ghost night</item>
    </string-array>


    <!--    GameComplete fragment-->
    <string name="game_won_text">Game Won</string>
    <string name="game_lost_text">Game Over</string>
    <string name="btn_lost_text">Try again</string>
    <string name="btn_won_text">Next game</string>

    <!--    AboutFragment-->
    <string name="about_details">This application is all about the Halloween characters we see around us. All the beautiful images were collected from <a href="https://www.vecteezy.com/free-vector/vector">Vector Vectors by Vecteezy</a>. Special thanks to all the designers of Vecteezy.</string>

    <!--    NavDrawer Menu-->
    <string name="ghost_pumpkin">Pumpkin Ghost</string>
    <string name="ghost_witch">Witch</string>
    <string name="ghost_zombie">Zombie</string>
    <string name="ghost_floating">Floating Ghost</string>
    <string name="ghost_burning_skull">Blazing Skull</string>
    <string name="about">About</string>

    <string name="ghost_pumpkin_detail">Jack-o’-Lanterns are pumpkins with carved faces or designs that are lighted from within. Originally, they were hollowed out turnips and potatoes with a lighted candle inside. The use of these lanterns originated from an Irish folktale about Stingy Jack.</string>
    <string name="ghost_skull_detail">Ghost Rider (Johnathon Blaze) is a fictional superhero appearing in American comic books published by Marvel Comics. Source: <a href="https://en.wikipedia.org/wiki/Ghost_Rider_(Johnny_Blaze)">Wikipedia</a></string>
    <string name="ghost_witch_detail">Witches were perceived as evil beings by early Christians in Europe, inspiring the iconic Halloween figure. Images of witches have appeared in various forms throughout history—from evil, wart-nosed women huddling over a cauldron of boiling liquid to hag-faced. Source: <a href="https://www.history.com/topics/folklore/history-of-witches">History</a></string>
    <string name="ghost_zombie_detail">A zombie is a fictional, undead, corporeal revenant created through the reanimation of a corpse. The term comes from Haitian folklore.</string>
    <string name="ghost_floating_detail">This is a DIY costume you can wear on Halloween. Find a white bed sheet, cover-up yourself, make two holes on the sheet, and you are ready for the party.</string>
</resources>