<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="io.github.sb689.summationlib.TitleFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="io.github.sb689.summationlib.GameFragment"
        android:label="@string/app_name">
<!--        <action-->
<!--            android:id="@+id/action_gameFragment_to_gameCompleteFragment"-->
<!--            app:destination="@id/gameCompleteFragment"-->
<!--            app:enterAnim="@anim/slide_in_left"-->
<!--            app:exitAnim="@anim/slide_out_right"-->
<!--            app:popEnterAnim="@anim/slide_in_right"-->
<!--            app:popExitAnim="@anim/slide_out_left"-->
<!--            app:popUpTo="@id/gameFragment"-->
<!--            app:popUpToInclusive="true" />-->

    </fragment>
    <fragment
        android:id="@+id/gameCompleteFragment"
        android:name="io.github.sb689.summationlib.GameCompleteFragment"
        android:label="@string/app_name">
        <argument
            android:name="isWon"
            app:argType="boolean" />
        <action
            android:id="@+id/action_gameCompleteFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/zombieFragment"
        android:name="io.github.sb689.summationlib.ZombieFragment"
        android:label="@string/ghost_zombie" />
    <fragment
        android:id="@+id/ghostFragment"
        android:name="io.github.sb689.summationlib.GhostFragment"
        android:label="@string/ghost_floating" />
    <fragment
        android:id="@+id/skullFragment"
        android:name="io.github.sb689.summationlib.SkullFragment"
        android:label="@string/ghost_burning_skull" />
    <fragment
        android:id="@+id/witchFragment"
        android:name="io.github.sb689.summationlib.WitchFragment"
        android:label="@string/ghost_witch" />
    <fragment
        android:id="@+id/pumpkinFragment"
        android:name="io.github.sb689.summationlib.PumpkinFragment"
        android:label="@string/ghost_pumpkin" />
    <fragment
        android:id="@+id/aboutFragment2"
        android:name="io.github.sb689.summationlib.AboutFragment"
        android:label="@string/about" />
</navigation>